refactor(order): 投影金额由分改为元，移除转换逻辑
- 将 ES、缓存、列表投影中的金额字段类型由 long 改为 BigDecimal
- 直接存储元金额，装配 DTO 时不再进行分转元换算
- 补充元金额一致性的 ES 测试用例